--- a/views/index.erb
+++ b/views/index.erb
@@ -1,1 +1,9 @@
-<h1>Hi World</h1>
+<h1>See current open jobs</h1>
+
+<ul class="open-jobs">
+  <% @jobs.each do |job| %>
+  <li><%= job["title"] %></li>
+    <% end %>
+</ul>
+
+<a href="/jobs">Check!</a>
